--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,16 @@
 <resources>
     <string name="app_name">Gank</string>
 
-    <!--首页-->
+    <!--公共-->
     <string name="error">网络请求失败</string>
+    <string name="open">打开</string>
+    <string name="close">关闭</string>
+
+    <!--首页-->
+
+    <!--菜单-->
+    <string name="menu_pic">图片</string>
+    <string name="menu_video">视频</string>
+
 
 </resources>
