1\添加开眼视频接口 2\变更主页视图方式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,11 @@
     <string name="menu_pic">图片</string>
     <string name="menu_video">视频</string>
 
+    <!--Gank-->
+    <string name="gank_list_title">Gank</string>
+
+    <!--OpenEye-->
+    <string name="eye_list_title">开眼视频</string>
+
 
 </resources>
