1、添加本地数据库及本地数据保存 2、支持无fragment的基本类

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="menu_video">视频</string>
     <string name="menu_setting">设置</string>
     <string name="menu_filter">筛选</string>
+    <string name="menu_collect">收藏</string>
 
     <string name="menu_login">登录</string>
     <string name="menu_register">注册</string>
