--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="menu_setting">设置</string>
     <string name="menu_filter">筛选</string>
     <string name="menu_collect">收藏</string>
+    <string name="menu_save">保存</string>
 
     <string name="menu_login">登录</string>
     <string name="menu_register">注册</string>
